added resume page, restructuring

--- a/resume/index.html
+++ b/resume/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Safaldas | Resume</title>
+    <title>Resume</title>
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" crossorigin="anonymous">
@@ -28,16 +28,31 @@
         <div class="row">
             <div class="col-xs-2"></div>
             <div class="col-xs-8">
-               <a href="/resume/">View my resume bot</a>
-               <a href="/mocktest/"> View my project</a>
+                <br/>
+                <br/>
+                <h3>Do you want to know about Safaldas G</h3>
+                <br/>
+                <h1> I am his bot secretary </h1>
+                <br/>
+                <form class="form" id="target">
+                    <div class="form-group">
+                        <input type="text" class="form-control input-lg" id="question" placeholder=": What's his Passion?">
+                    </div>
+                    <button type="submit" id="submit-button" class="btn btn-default">ask</button>
+                </form>
+                <br/>
+                <br/>
+                
+            <div id="answer-box">
+                <div > <h4 id="answer"></h4></div>
+                <div id="image"></div>
+            </div>
             </div>
             <div class="col-xs-2"></div>
 
 
         </div>
-<script>
-    window.location.href('https://safaldas.github.io/resume')
-    </script>
+
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <!-- Include all compiled plugins (below), or include individual files as needed -->
