added resume pdf

--- a/resume/index.html
+++ b/resume/index.html
@@ -47,6 +47,9 @@
                 <div > <h4 id="answer"></h4></div>
                 <div id="image"></div>
             </div>
+                <br/>
+                <br/>
+                <a href="./resume.pdf"> This is my resume </a>
             </div>
             <div class="col-xs-2"></div>
 
