--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         </div>
 <script>
-    window.location.href('https://safaldas.github.io/resume')
+    window.location.href = 'https://safaldas.github.io/resume'
     </script>
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
