--- a/resume/index.html
+++ b/resume/index.html
@@ -61,7 +61,7 @@
         <!-- Include all compiled plugins (below), or include individual files as needed -->
         <!-- Latest compiled and minified JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" crossorigin="anonymous"></script>
-        <script src="/app.js"> </script>
+        <script src="./app.js"> </script>
 </body>
 
 </html>
