added wit ai link

--- a/resume/index.html
+++ b/resume/index.html
@@ -49,11 +49,11 @@
             </div>
                 <br/>
                 <br/>
-                <a href="./resume.pdf"> This is my resume </a>
+                <a href="./resume.pdf"  target="_blank"> This is my resume </a>
             </div>
             <div class="col-xs-2"></div>
 
-
+            <div>This uses <a href="https://wit.ai" target="_blank"> Wit.ai</a> to setup a bot.</div>
         </div>
 
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
