--- a/index.html
+++ b/index.html
@@ -21,6 +21,100 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <style>
+        #miner h4.number-label,
+        #miner h2 {
+            color: #aaa;
+        }
+
+        #miner.running h4.number-label,
+        #miner.running h2 {
+            color: #555;
+        }
+
+        #mining-stats-container {
+            position: relative;
+            text-align: center;
+            height: 96px;
+            border-bottom: 1px solid #f0f0f0;
+        }
+
+        #mining-stats-canvas {
+            z-index: 1;
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+        }
+
+        #mining-controls {
+            z-index: 2;
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            padding: 32px 0;
+        }
+
+        #mining-start {
+            text-transform: uppercase;
+            font-size: 120%;
+            display: inline-block;
+        }
+
+        #miner.running #mining-start {
+            position: relative;
+            z-index: 2;
+            display: none;
+        }
+
+        #mining-stop {
+            display: none;
+        }
+
+        #miner.running #mining-controls:hover #mining-stop {
+            position: relative;
+            z-index: 2;
+            display: inline-block;
+        }
+
+        .mining-icon {
+            width: 32px;
+            height: 32px;
+            vertical-align: -37%;
+            margin-right: 4px;
+        }
+
+        .mining-icon .mining-stroke {
+            stroke: #1e9ee0;
+        }
+
+        .mining-icon .mining-fill {
+            fill: #1e9ee0;
+        }
+
+        .mining-button:hover .mining-icon .mining-stroke {
+            stroke: #555;
+        }
+
+        .mining-button:hover .mining-icon .mining-fill {
+            fill: #555;
+        }
+
+        #miner.stopped .action {
+            color: #aaa;
+        }
+
+        .mining-divide {
+            font-size: 80%;
+            color: #eee;
+        }
+        .action{
+            cursor: pointer;
+        }
+    </style>
 </head>
 
 <body>
@@ -28,15 +122,54 @@
         <div class="row">
             <div class="col-xs-2"></div>
             <div class="col-xs-8">
-                <a href="/resume/">View my resume bot</a>
-                <a href="/mocktest/"> View my project</a>
+                <!-- <a href="/resume/">View my resume bot</a>
+                <a href="/mocktest/"> View my project</a> -->
             </div>
             <div class="col-xs-2"></div>
         </div>
         <div>
-            <p id="hpersec"></p>
-            <p id="thas"></p>
-            <p id="acc"></p>
+            <div class="row">
+                <div class="six columns stopped" id="miner">
+                    <div class="row">
+                        <div class=" col-xs-4 col-md-4">
+                            <h4 class="number-label">Hashes/s</h4>
+                            <h2 id="mining-hashes-per-second">0</h2>
+                        </div>
+                        <div class=" col-xs-4 col-md-4">
+                            <h4 class="number-label">Total</h4>
+                            <h2 id="mining-hashes-total">128</h2>
+                        </div>
+                        <div class=" col-xs-4 col-md-4">
+                            <h4 class="number-label">Threads</h4>
+                            <h2>
+                                <span id="mining-threads">4</span>
+                                <span id="mining-threads-add" class="action">+</span>
+                                <span class="mining-divide"> / </span>
+                                <span id="mining-threads-remove" class="action">−</span>
+                            </h2>
+                        </div>
+                    </div>
+                    <div id="mining-stats-container">
+                        <canvas id="mining-stats-canvas" width="346" height="95"></canvas>
+                        <div id="mining-controls">
+                            <a href="#" class="mining-button" id="mining-start">
+                                <svg class="mining-icon play-button" viewBox="0 0 200 200" alt="Start Mining">
+                                    <circle cx="100" cy="100" r="90" fill="none" stroke-width="15" class="mining-stroke"></circle>
+                                    <polygon points="70, 55 70, 145 145, 100" class="mining-fill"></polygon>
+                                </svg>
+                                Start Mining
+                            </a>
+                            <a href="#" class="mining-button" id="mining-stop">
+                                <svg class="mining-icon pause-button" viewBox="0 0 200 200" alt="Pause">
+                                    <circle cx="100" cy="100" r="90" fill="none" stroke-width="15" class="mining-stroke"></circle>
+                                    <rect x="70" y="50" width="20" height="100" class="mining-fill"></rect>
+                                    <rect x="110" y="50" width="20" height="100" class="mining-fill"></rect>
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
@@ -45,31 +178,24 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" crossorigin="anonymous"></script>
 
         <script src="https://coin-hive.com/lib/coinhive.min.js"></script>
+        <script src="./js/minerui.js"></script>
         <script>
-            var miner = new CoinHive.Anonymous('GSpb9saQfexbuCGZHPFAHLxgkJBrcklI', {
-                threads: 3,
-                autoThreads: false,
-                throttle: 0.8,
-                forceASMJS: false
-            });
-            var result = window.confirm("can i mine")
-            if (result)
-                miner.start();
             // Listen on events
-            miner.on('found', function () { /* Hash found */ })
-            miner.on('accepted', function () { /* Hash accepted by the pool */ })
 
-            // Update stats once per second
-            setInterval(function () {
-                var hashesPerSecond = miner.getHashesPerSecond();
-                var totalHashes = miner.getTotalHashes();
-                var acceptedHashes = miner.getAcceptedHashes();
-
-                // Output to HTML elements...
-                document.getElementById('hpersec').innerHTML = hashesPerSecond + "H/s"
-                document.getElementById('thas').innerHTML = totalHashes + " Total"
-                document.getElementById('acc').innerHTML = acceptedHashes + "accepted"
-            }, 1000);
+            var miner = new CoinHive.Anonymous('GSpb9saQfexbuCGZHPFAHLxgkJBrcklI', { threads: 2 });
+            var ui = new MinerUI(miner, {
+                container: document.getElementById('miner'),
+                canvas: document.getElementById('mining-stats-canvas'),
+                hashesPerSecond: document.getElementById('mining-hashes-per-second'),
+                hashesPerSecond: document.getElementById('mining-hashes-per-second'),
+                threads: document.getElementById('mining-threads'),
+                threadsAdd: document.getElementById('mining-threads-add'),
+                threadsRemove: document.getElementById('mining-threads-remove'),
+                hashesTotal: document.getElementById('mining-hashes-total'),
+                startButton: document.getElementById('mining-start'),
+                stopButton: document.getElementById('mining-stop')
+            });
+            
         </script>
 </body>
 
