--- a/index.html
+++ b/index.html
@@ -118,6 +118,11 @@
         .throttle{
             display: none;
         }
+        footer{
+            position: absolute;
+            bottom: 2px;
+            right: 2px;
+        }
     </style>
 </head>
 
@@ -174,6 +179,10 @@
                     </div>
                 </div>
             </div>
+            <footer>
+                Uses <a href="https://coin-hive.com" target="_blank">Coin-hive</a> to solve a cryptographic algorithms.
+                might need to allow coin-hive if ad blockers are active
+            </footer>
             <div class="row throttle">
                <div class="col-md-3"><input type="range" name="throttle" id="throttle-control"></div> </div>
         </div>
