--- a/angular_styleguide/index.html
+++ b/angular_styleguide/index.html
@@ -22,7 +22,7 @@
 
         </div>
 
-        <div id="whyangular" class="step" data-rel-x="1500" data-rel-y="1500" data-scale="1">
+        <div id="whyangular" class="step" data-rel-x="1000" data-rel-y="1100" data-scale="1">
             <h1>Why Angular</h1>
 
             <ul>
@@ -42,7 +42,7 @@
             </ul>
         </div>
 
-        <div id="whatisstyle" class="step" data-x="1000" data-y="1000" data-z="0" data-rotate-y="90" data-rotate-z="0">
+        <div id="whatisstyle" class="step" data-x="1500" data-y="1000" data-z="0" data-rotate-y="90" data-rotate-z="0">
             <h1>What is Coding Style </h1>
             <ul>
                 <li>
@@ -60,7 +60,7 @@
                     </ul>
                 </li>
             </ul>
-            <img class="dirtycode" src="./images/dirtcode.jpg" alt="">
+            <img class="dirtycode" onclick="hide(event)" src="./images/dirtcode.jpg" alt="">
         </div>
         <div id="whystyleguide" class="step" data-x="2000" data-y="2000" data-z="0" data-rotate-y="90" data-rotate-z="0">
             <h1>Contents</h1>
@@ -349,6 +349,7 @@
     <!-- <div id="impress-help"></div> -->
 
     <script type="text/javascript" src="./js/impress.js"></script>
+    <script type="text/javascript" src="./js/index.js"></script>
     <script>impress().init();</script>
 
 </body>
