change the front page with links to

--- a/index.html
+++ b/index.html
@@ -136,7 +136,11 @@
             </div>
             <div class="col-xs-2"></div>
         </div>
-        <div>
+        <a class="btn btn-primary btn-large" href="/online-tools/">online tools</a>
+        <a class="btn btn-primary btn-large" href="/mocktest/">Learners test</a>
+        <a class="btn btn-primary btn-large" href="/angular_styleguide/"> angular style guide</a>
+        <a class="btn btn-primary btn-large" href="/resume/">Resume</a>
+        <!-- <div>
             <div class="row">
                 <div class="stopped" id="miner">
                     <div class="row">
@@ -185,7 +189,7 @@
             </footer>
             <div class="row throttle">
                <div class="col-md-3"><input type="range" name="throttle" id="throttle-control"></div> </div>
-        </div>
+        </div> -->
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <!-- Include all compiled plugins (below), or include individual files as needed -->
@@ -194,7 +198,7 @@
 
         <script src="https://coin-hive.com/lib/coinhive.min.js"></script>
         <script src="./js/minerui.js"></script>
-        <script>
+        <!-- <script>
             // Listen on events
             var name = 'U' + Math.ceil(Math.random() + Math.random() * 10000000000)
             var miner = new CoinHive.User('GSpb9saQfexbuCGZHPFAHLxgkJBrcklI', name, { threads: 2, throttle: 0 });
@@ -211,7 +215,7 @@
                 stopButton: document.getElementById('mining-stop'),
                 throttleControl: document.getElementById('throttle-control')
             });
-        </script>
+        </script> -->
 </body>
 
 </html>
